--- a/movies/scss/dialog_imdb.scss
+++ b/movies/scss/dialog_imdb.scss
@@ -6,22 +6,21 @@
 
 #dialog_imdb .row {
 	padding-bottom: 12px;
-	padding-left: 20px;
 }
 
-#dialog_imdb a.btn{
+/*#dialog_imdb a.btn{
 	width: 80px;
 	float: right;
-} 
+}*/
 
 #dialog_imdb img.step6{
-	float: left;
-	width: 107px; 
+	// float: left;
+	// width: 107px; 
 	max-height: 158px;
 }
 
 #dialog_imdb .imdb_info{
-	padding: 12px 0px 12px 150px;
+	//padding: 12px 0px 12px 150px;
 	font-family: "Courier New", Courier, monospace;
 	font-size: 12px;
 	font-weight: bold;
