--- a/movies/templates/imdb_year_search.html
+++ b/movies/templates/imdb_year_search.html
@@ -17,7 +17,7 @@
 	    	<td>{{number}}</td>
 			<td>
 				<a href='http://www.imdb.com{{href}}' target="_imdb">
-					<img src='{{image|default:"/static/noposter.jpg"}}' class='ic_tooltip_img'>
+					<img src='{{image|default:"/static/noposter.jpg"}}' class='ic_tooltip_img' alt='{{title}}'>
 				</a>
 			</td>
 			<td>
