--- a/movies/templates/dialog_confirm.html
+++ b/movies/templates/dialog_confirm.html
@@ -1,9 +1,13 @@
-<div id="dialog_confirm" class="modal hide fade container" tabindex='-1'>
-	<div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-	</div>
-    <div class="modal-body"></div>
-    <div class="modal-footer">
-    	<a href="#" class="btn btn-primary">Ok</a>
+<div id="dialog_confirm" class="modal fade" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            </div>
+            <div class="modal-body"></div>
+            <div class="modal-footer">	
+                <a href="#" class="btn btn-primary">Ok</a>
+            </div>
+        </div>
     </div>
 </div>
