--- a/movies/templates/generic.html
+++ b/movies/templates/generic.html
@@ -2,34 +2,28 @@
 <html>
   <head>
     <title>{% block title %}Movies control{% endblock %}</title>
-    <!--
-      black: cyborg, slate, superhero, 
-      white: spruce, cerulean, journal, simplex, united, cosmo, readable, spacelab
-       cosmo: nice, waiting bar not ok
-       spruce: very okay
-    -->
-    <link href="/static/bootstrap/css/journal.bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="/static/messenger/css/messenger.css" rel="stylesheet" media="screen">
-    <link href="/static/messenger/css/messenger-theme-future.css" rel="stylesheet" media="screen">
-    <link href="/static/movies.css" rel="stylesheet" media="screen">
+    <link href="/static/bootstrap-3.3.1/css/bootstrap.min.css" rel="stylesheet" media="screen" type='text/css'>
+    <link href="/static/messenger/css/messenger.css" rel="stylesheet" media="screen" type='text/css'>
+    <link href="/static/messenger/css/messenger-theme-future.css" rel="stylesheet" media="screen" type='text/css'>
+    <link href="/static/movies.css" rel="stylesheet" media="screen" type='text/css'>
   </head>
   <body>
     {% block body %}{% endblock %}
-    <script src="/static/jquery-2.1.3.min.js"></script>
-    <script src="/static/jquery.cookie.js"></script>
-    <script src="/static/json2.js"></script>
-    <script src="/static/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/static/messenger/js/messenger.min.js"></script>
-    <script src="/static/messenger/js/messenger-theme-future.js"></script>
-    <script src="/static/movie_edition.js"></script>
-    <script src="/static/locations.js"></script>
-    <script src="/static/locations_sync.js"></script>
-    <script src="/static/dialog_imdb.js"></script>
-    <script src="/static/dialog_confirm.js"></script>
-    <script src="/static/movies_control.js"></script>
-    <script src="/static/subtitles_handling.js"></script>
-    <script src="/static/ajax.js"></script>
-    <script src="/static/global.js"></script>
+    <script src="/static/jquery-2.1.3.min.js" type="text/javascript"></script>
+    <script src="/static/jquery.cookie.js" type="text/javascript"></script>
+    <script src="/static/json2.js" type="text/javascript"></script>
+    <script src="/static/bootstrap-3.3.1/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="/static/messenger/js/messenger.min.js" type="text/javascript"></script>
+    <script src="/static/messenger/js/messenger-theme-future.js" type="text/javascript"></script>
+    <script src="/static/movie_edition.js" type="text/javascript"></script>
+    <script src="/static/locations.js" type="text/javascript"></script>
+    <script src="/static/locations_sync.js" type="text/javascript"></script>
+    <script src="/static/dialog_imdb.js" type="text/javascript"></script>
+    <script src="/static/dialog_confirm.js" type="text/javascript"></script>
+    <script src="/static/movies_control.js" type="text/javascript"></script>
+    <script src="/static/subtitles_handling.js" type="text/javascript"></script>
+    <script src="/static/ajax.js" type="text/javascript"></script>
+    <script src="/static/global.js" type="text/javascript"></script>
     {% if messages %}
     <script>
     {% for message in messages %}
