--- a/movies/templates/locations.html
+++ b/movies/templates/locations.html
@@ -3,22 +3,45 @@
 {% block body %}
 	{% if locations %}
 	
-	<div id='input_path' class="modal hide fade" tabindex='-1'>
-		<form action='{%url "#locations_sync" %}' method='POST'>{% csrf_token %}
-			<input id='input_path_id' type='hidden' name='location.id'>
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				<h5>Synchronize location</h5>
+	<div id='input_path' class="modal fade">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<form action='{%url "#locations_sync" %}' method='POST'>{% csrf_token %}
+					<input id='input_path_id' type='hidden' name='location.id'>
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+						<h5>Synchronize location</h5>
+					</div>
+					<div class="modal-body">
+ 						<input name='location.path' type='text' placeholder='full path to location'>
+					</div>
+					<div class="modal-footer">
+						<button type='submit' id='location-search-button' class="btn btn-primary">Process path</button>
+					</div>			
+				</form>
 			</div>
-			<div class="modal-body">
-				<input name='location.path' type='text' placeholder='full path to location'>
-			</div>
-			<div class="modal-footer">
-				<button type='submit' id='location-search-button' class="btn btn-primary">Process path</button>
-			</div>			
-		</form>
+		</div>
 	</div>
 
+
+<!--  <div id='input_path' class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        <p>One fine body&hellip;</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+ -->
 	<table id='locations' class='table table-striped no_table-bordered table-hover'>
 		<caption>Locations</caption>
 		<thead>
@@ -32,8 +55,9 @@
 		    	<td>
 		    		<div class="btn-toolbar">
 					  <div class="btn-group">
-					    <a class="btn btn-mini add_path" href="#" data-location="{{location.id}}">
-					    <i class="icon-hdd icon-white"></i></a>
+					  	<button type="button" class="btn btn-default add_path" data-location="{{location.id}}">
+  							<span class="glyphicon glyphicon-hdd" aria-hidden="true"></span>
+						</button>
 					  </div>
 					</div>
 			    </td>
