--- a/movies/templates/locations_subtitle_dialog.html
+++ b/movies/templates/locations_subtitle_dialog.html
@@ -1,25 +1,35 @@
-<div id='locations_subtitle_dialog' class="modal hide fade container" tabindex='-1'>
-	<form action='{%url "#lsync_subtitle_edit" %}' method='POST'>{% csrf_token %}
-		<div class="modal-header">
-			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-			<div class='path'></div>
-		</div>
-		<div class="modal-body">
-			<input type='hidden' name='location.id' value='{{location.id}}'>
-			<input type='hidden' name='location.path' value='{{path}}'>
-			<input type='hidden' name='movie.id'>
-			<input type='hidden' name='file.path'>
-			<select name='language' class='span6'>
-				{%for lang in languages%}
-					<option value='{{lang}}' selected>{{lang}}</option>
-				{%endfor%}
-			</select>
-			<label class='checkbox'>
-				<input type="checkbox" name="normalize" value="normalize" checked>Normalize name
-			</label>
-		</div>
-		<div class="modal-footer">
-			<button type="submit" class="btn btn-primary">Update</button>
-		</div>
+<div id="locations_subtitle_dialog" class="modal fade" tabindex="-1">
+    <form action="{%url '#lsync_subtitle_edit' %}" method="POST">{% csrf_token %}
+	    <div class="modal-dialog">
+	        <div class="modal-content">
+	            <div class="modal-header">
+	            	<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	                <div class="path"></div>
+	            </div>
+	            <div class="modal-body">
+	                <input type="hidden" name="location.id" value="{{location.id}}" />
+	                <input type="hidden" name="location.path" value="{{path}}" />
+	                <input type="hidden" name="movie.id" />
+	                <input type="hidden" name="file.path" />
+	                <div class='container-fluid'>
+	                	<div class='row'>
+			                <select name="language" class="col-sm-12 input-lg">
+			                	{%for lang in languages%}
+			                    	<option value="{{lang}}" selected="selected">{{lang}}</option>
+			                    {%endfor%}
+			                </select>
+			            </div>
+	                	<div class='row'>
+			                <label label-default="label-default" class="checkbox col-sm-11 col-sm-offset-1">
+			                	<input type="checkbox" name="normalize" value="normalize" checked="checked"/>Normalize name
+			                </label>
+			            </div>
+		            </div>
+	            </div>
+	            <div class="modal-footer">
+	                <button type="submit" class="btn btn-primary">Update</button>
+	            </div>
+	        </div>
+	    </div>
 	</form>
 </div>
