--- a/movies/templates/locations_subtitle_fetch_dialog.html
+++ b/movies/templates/locations_subtitle_fetch_dialog.html
@@ -1,41 +1,58 @@
-<div id='locations_subtitle_fetch_dialog' class="modal hide fade container" tabindex='-1'>
-	<form action='{%url "#lsync_subtitle_fetch" %}' method='POST'>{% csrf_token %}
-		<div class="modal-header">
-			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-			<div class='title'></div>
-		</div>
-		<div class="modal-body">
-			<input type='hidden' name='location.id' value='{{location.id}}'>
-			<input type='hidden' name='location.path' value='{{path}}'>
-			<input type='hidden' name='movie.id'>
-			<input type='hidden' name='title'>
-			<label>
-				<span class='span1'>Title</span>
-				<select name='subtitle' class='span5'></select>
-			</label>
-			<label>
-				<span class='span2'>Language</span>
-				<select name='language' class='span4'>
-					{%for lang in languages%}
-						<option value='{{lang}}' selected>{{lang}}</option>
-					{%endfor%}
-				</select>
-				<span class='span2'>Selection</span>
-				<select name='subtitles_selection' class='span4'>
-					{%for k, v in subtitles_selection.items%}
-						<option value='{{k}}'>{{v}}</option>
-					{%endfor%}
-				</select>
-			</label>
-			<label class='checkbox'>
-				<input type="checkbox" name="dir_creation" >Just create the directory structure</input>
-			</label>
-<!-- 			<label class='checkbox span3'>
-				<input type="checkbox" name="subscene_com" checked>Use subscene.com</input>
-			</label>
- -->		</div>
-		<div class="modal-footer">
-			<button type="submit" class="btn btn-primary">Fetch subtitles</button>
-		</div>
-	</form>
+<div id="locations_subtitle_fetch_dialog" class="modal fade" tabindex="-1">
+    <form action="{%url '#lsync_subtitle_fetch' %}" method="POST">{% csrf_token %}
+	    <div class="modal-dialog">
+	        <div class="modal-content">
+	            <div class="modal-header">
+	                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	                <div class="title"></div>
+	            </div>
+	            <div class="modal-body">
+	            	<div class='container-fluid'>
+		                <input type="hidden" name="location.id" value="{{location.id}}" />
+		                <input type="hidden" name="location.path" value="{{path}}" />
+		                <input type="hidden" name="movie.id" />
+		                <input type="hidden" name="title" />
+		                <div class='form-horizontal'>
+  							<div class='form-group'>		                
+			                	<label for='subtitle' class='col-sm-2 control-label'>Title</label>
+			                	<div class='col-sm-10'>
+		                    		<select name="subtitle" class='form-control'></select>
+		                    	</div>
+			                </div>
+  							<div class='form-group'>		                
+			                	<label for='language' class='col-sm-2 control-label'>Language</label>
+			                	<div class='col-sm-10'>
+		                    		<select name="language" class='form-control'>
+				                    	{%for lang in languages%}
+				                        <option value="{{lang}}" selected="selected">{{lang}}</option>
+				                        {%endfor%}		                    			
+		                    		</select>
+		                    	</div>
+			                </div>
+  							<div class='form-group'>		                
+			                	<label for='subtitles_selection' class='col-sm-2 control-label'>Selection</label>
+			                	<div class='col-sm-10'>
+		                    		<select name="subtitles_selection" class='form-control'>
+					                    {%for k, v in subtitles_selection.items%}
+					                        <option value="{{k}}">{{v}}</option>
+					                    {%endfor%}
+		                    		</select>
+		                    	</div>
+			                </div>
+  							<div class='form-group'>		                
+			                	<div class='col-sm-10 col-sm-offset-2'>
+					                <label label-default="label-default" class="checkbox">
+					                    <input type="checkbox" name="dir_creation" />Just create the directory structure
+					                </label>
+		                    	</div>
+			                </div>
+			            </div>
+		            </div>
+	            </div>
+	            <div class="modal-footer">
+	                <button type="submit" class="btn btn-primary">Fetch subtitles</button>
+	            </div>
+	        </div>
+	    </div>
+	 </form>
 </div>
