--- a/movies/templates/locations_sync_subtitle.html
+++ b/movies/templates/locations_sync_subtitle.html
@@ -1,22 +1,22 @@
 <tr class='subtitle'>
-    <td>
+    <td class='subtitle-toolbar'>
         {%if sub.in_fs %}          
             <div class="btn-group">
-                <a class="btn btn-mini btn-color-{%if sub.language%}yellow{%else%}green{%endif%} edit-subtitle" href="#">
-                    <i class="icon-pencil"></i>
+                <a type="button" class="btn btn-xs btn-color-{%if sub.language%}yellow{%else%}green{%endif%} edit-subtitle" href="#">
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                 </a>
-                <a class="btn btn-mini shift-subtitle" href="#">
-                    <i class="icon-wrench"></i>
+                <a type="button" class="btn btn-xs btn-default shift-subtitle" href="#">
+                    <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
                 </a>
                 {% if not sub.language %}
-                <a class="btn btn-mini btn-color-red trash-subtitle" href="#">
-                    <i class="icon-trash"></i>
+                <a type="button" class="btn btn-xs btn-color-red trash-subtitle" href="#">
+                    <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                 </a>
                 {%endif%}
             </div>
         {%else%}
-            <a class="btn btn-mini btn-color-red remove-subtitle" href="#">
-                <i class="icon-minus"></i>
+            <a type="button" class="btn btn-xs btn-color-red remove-subtitle" href="#">
+                <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
             </a>
         {%endif%}
     </td>
