--- a/movies/templates/movie_edition_lang_dialog.html
+++ b/movies/templates/movie_edition_lang_dialog.html
@@ -1,30 +1,40 @@
-<div id='movie_edition_lang_dialog' class="modal hide fade container" tabindex='-1'>
-	<form action='{%url "#moved_langs" %}' method='POST'>{% csrf_token %}
-		<div class="modal-header">
-			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-			<div id='movie_title'></div>
-		</div>
-		<div class="modal-body">
-			<input type='hidden' name='movie.id' />
-			<input type='hidden' name='lang.target' />
-			<div id='dialog_title'></div>
-			<div class='offset1'>
-				{%for lang in languages%}
-						<label class='checkbox'>
-							<input type="checkbox" name="select.{{lang}}" value="{{lang}}" checked>{{lang}}</input>
-						</label>
-				{%endfor%}
-				<div class='audio_variants'>
-					{%for lang in audio_variants%}
-							<label class='checkbox'>
-								<input type="checkbox" name="select.{{lang}}" value="{{lang}}" checked>{{lang}}</input>
-							</label>
-					{%endfor%}
+<div id='movie_edition_lang_dialog' class="modal fade" tabindex='-1'>
+    <div class="modal-dialog">
+        <div class="modal-content">
+			<form action='{%url "#moved_langs" %}' method='POST'>{% csrf_token %}
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+					<div id='movie_title'></div>
 				</div>
-			</div>
+				<div class="modal-body">
+					<input type='hidden' name='movie.id' />
+					<input type='hidden' name='lang.target' />
+					<div class="container-fluid">
+						<div class='row'>
+							<div id='dialog_title' class='col-sm-11 col-sm-offset-1'></div>
+						</div>
+						<div class='row'>
+							<div class='col-sm-10 col-sm-offset-2'>
+								{%for lang in languages%}
+										<label class='checkbox'>
+											<input type="checkbox" name="select.{{lang}}" value="{{lang}}" checked/>{{lang}}
+										</label>
+								{%endfor%}
+								<div class='audio_variants'>
+									{%for lang in audio_variants%}
+											<label class='checkbox'>
+												<input type="checkbox" name="select.{{lang}}" value="{{lang}}" checked/>{{lang}}
+											</label>
+									{%endfor%}
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="modal-footer">
+					<button type="submit" class="btn btn-primary">Update</button>
+				</div>
+			</form>
 		</div>
-		<div class="modal-footer">
-			<button type="submit" class="btn btn-primary">Update</button>
-		</div>
-	</form>
+	</div>
 </div>
