--- a/movies/templates/imdb_year_search.html
+++ b/movies/templates/imdb_year_search.html
@@ -2,7 +2,7 @@
 {% block title %}{{year}}/imdb{% endblock %}
 {% block body %}
 
-<table id='imdb_search' class='table table-striped no_table-bordered table-hover'>
+<table id='imdb_search' class='table table-striped table-hover'>
 	<caption>Best Imdb search year {{year}} (missing) [limit: {{limit}}]</caption>
 	<thead>
 		<tr>
