--- a/movies/templates/locations_sync.html
+++ b/movies/templates/locations_sync.html
@@ -16,7 +16,7 @@
 	  <input type='submit'>
 	</form>
 
-	<div id="locations_sync_problems_dialog" class="modal fade container" tabindex="-1">
+	<div id="locations_sync_problems_dialog" class="modal fade" tabindex="-1">
 	    <div class="modal-dialog">
 	        <div class="modal-content">
 	            <div class="modal-header">
@@ -24,7 +24,7 @@
 	                <h5>Unhandled files in location</h5>
 	            </div>
 	            <div class="modal-body">
-	                <table class="table no_table-bordered no_table-hover">
+	                <table class="table table-condensed">
 	                    <tbody>{%include "locations_sync_problems.html"%}</tbody>
 	                </table>
 	            </div>
