--- a/movies/templates/locations.html
+++ b/movies/templates/locations.html
@@ -24,25 +24,7 @@
 	</div>
 
 
-<!--  <div id='input_path' class="modal fade">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Modal title</h4>
-      </div>
-      <div class="modal-body">
-        <p>One fine body&hellip;</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
- -->
-	<table id='locations' class='table table-striped no_table-bordered table-hover'>
+	<table id='locations' class='table table-striped table-hover'>
 		<caption>Locations</caption>
 		<thead>
 			<tr><th>Name</th><th>Description</th><th>Operations</th></tr>
