Toward a common approach

--- a/movies/scss/locations.scss
+++ b/movies/scss/locations.scss
@@ -3,14 +3,14 @@
   margin: 20px 25% 0 25%;
 }
 
+#locations-icon {
+  width: 100%;
+  //margin-bottom: 4px;
+}
+
 #locations td {
   vertical-align: middle;
 }
-
-#input_path input[type='text']{
- 	width: 100%;
-} 
-
 
 #locations_sync {
   width: 75%;
