--- a/movies/templates/locations_subtitle_dialog.html
+++ b/movies/templates/locations_subtitle_dialog.html
@@ -4,7 +4,7 @@
 	        <div class="modal-content">
 	            <div class="modal-header">
 	            	<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	                <div class="path"></div>
+	                <h5 class="path"></h5>
 	            </div>
 	            <div class="modal-body">
 	                <input type="hidden" name="location.id" value="{{location.id}}" />
