--- a/movies/scss/index.scss
+++ b/movies/scss/index.scss
@@ -1,6 +1,8 @@
 $bg_color_inverse:#111;
 $fg_color_inverse:#fff; 
 
+@font-face { font-family: 'Poiret One'; src: url('/static/PoiretOne-Regular.ttf'); } 
+
 body{
     padding: 0px;
     margin: 0px;
@@ -16,6 +18,11 @@ caption{
 	margin: 12px;	
 }
 
+a.a-no-decor {
+  text-decoration: none;
+  color: black;
+}
+
 .error_dialog{
 	display: none;
 	background: #c00;
@@ -24,6 +31,54 @@ caption{
 	width: 100%;
 	padding: 6px 0;
 	margin-top: 4px;
+}
+
+
+.prepend-top{
+  margin-top: 1.2em;
+}
+
+.header-typo{
+  font-family: 'Poiret One', cursive;
+  font-weight: bold;
+  font-size: 4.2em;
+  margin-top: 2px;
+}
+
+
+.subheader-typo{
+  font-family: "Lucida Console", Monaco, monospace;
+  //font-weight: bold;
+  font-size: 0.8em;
+  margin-top: 2px;
+}
+
+
+
+#index_html{
+	background: black;
+
+	.row {
+		margin-top: 96px;
+	}
+
+	a.main-icon-ref {
+		text-decoration: none;
+		border-radius: 24px;
+		img{
+			width: 100%;
+			height:100%;
+		}
+	}
+
+	a.main-icon-ref:hover {
+		background: #22b;
+	}
+
+	#locations_selection select {
+		font-family: "Lucida Console", Monaco, monospace;
+	}
+
 }
 
 @import "buttons";
