--- a/movies/templates/generic.html
+++ b/movies/templates/generic.html
@@ -7,7 +7,7 @@
     <link href="/static/messenger/css/messenger-theme-future.css" rel="stylesheet" media="screen" type='text/css'>
     <link href="/static/movies.css" rel="stylesheet" media="screen" type='text/css'>
   </head>
-  <body>
+  <body {% block body_id %}{% endblock %}>
     {% block body %}{% endblock %}
     <script src="/static/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="/static/jquery.cookie.js" type="text/javascript"></script>
@@ -21,6 +21,7 @@
     <script src="/static/dialog_imdb.js" type="text/javascript"></script>
     <script src="/static/dialog_confirm.js" type="text/javascript"></script>
     <script src="/static/movies_control.js" type="text/javascript"></script>
+    <script src="/static/index.js" type="text/javascript"></script>
     <script src="/static/subtitles_handling.js" type="text/javascript"></script>
     <script src="/static/ajax.js" type="text/javascript"></script>
     <script src="/static/global.js" type="text/javascript"></script>
