--- a/movies/templates/locations.html
+++ b/movies/templates/locations.html
@@ -3,50 +3,96 @@
 {% block body %}
 	{% if locations %}
 	
-	<div id='input_path' class="modal fade">
+	<div id='edit-location' class="modal fade">
 		<div class="modal-dialog">
 			<div class="modal-content">
-				<form action='{%url "#locations_sync" %}' method='POST'>{% csrf_token %}
-					<input id='input_path_id' type='hidden' name='location.id'>
+				<form action='{%url "#locations_update" %}' method='POST'>{% csrf_token %}
+					<input type='hidden' name='location.id'>
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-						<h5>Synchronize location</h5>
+						<h5 id='dialog-title'></h5>
 					</div>
 					<div class="modal-body">
- 						<input name='location.path' type='text' placeholder='full path to location'>
+						<div class='container-fluid form-horizontal'>
+  							<div class='form-group'>		                
+			                	<label for='location.name' class='col-sm-2 control-label'>Name</label>
+			                	<div class='col-sm-10'>
+		                    		<input name="location.name" class='form-control'></select>
+		                    	</div>
+			                </div>
+  							<div class='form-group'>		                
+			                	<label for='location.description' class='col-sm-2 control-label'>Description</label>
+			                	<div class='col-sm-10'>
+		                    		<input name="location.description" class='form-control'></select>
+		                    	</div>
+			                </div>
+  							<div class='form-group'>		                
+			                	<label for='location.path' class='col-sm-2 control-label'>Path</label>
+			                	<div class='col-sm-10'>
+		                    		<input name="location.path" class='form-control'></select>
+		                    	</div>
+			                </div>
+						</div>
 					</div>
 					<div class="modal-footer">
-						<button type='submit' id='location-search-button' class="btn btn-primary">Process path</button>
+						<button type='submit' id='location-search-button' class="btn btn-primary">Ok</button>
 					</div>			
 				</form>
 			</div>
 		</div>
 	</div>
 
+    <div class='jumbotron'>
+        <div class='container'>
+            <div class='row'>
+                <div class='col-sm-2'>
+                    <a href='/'><img src='/static/locations.png' id='locations-icon'></a>
+                </div>
+                <div class='col-sm-4'>
+                    <div class='col-sm-12 header-typo'>locations</div>
+                    <div class='row'>
+                        <div class='col-sm-6 col-sm-offset-3 subheader-typo'>DJMovies by coderazzi</div>
+                    </div>
+                </div>
+                <div class='col-sm-2 col-sm-offset-4'>
+                    <div class='row'>
+                        <input class="btn btn-primary col-sm-10 prepend-top" type="button" value="Add new location" id='add-location-btn'/>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-	<table id='locations' class='table table-striped table-hover'>
-		<caption>Locations</caption>
-		<thead>
-			<tr><th>Name</th><th>Description</th><th>Operations</th></tr>
-		</thead>
-		<tbody>
-		    {% for location in locations %}
-		    <tr>
-		    	<td>{{location.name}}</td>
-		    	<td>{{location.description}}</td>
-		    	<td>
-		    		<div class="btn-toolbar">
-					  <div class="btn-group">
-					  	<button type="button" class="btn btn-default add_path" data-location="{{location.id}}">
-  							<span class="glyphicon glyphicon-hdd" aria-hidden="true"></span>
-						</button>
-					  </div>
-					</div>
-			    </td>
-		    </tr>
-		    {% endfor %}
-		</tbody>
-	</table>
+    <div class='container'>
+        <div class='row'>
+            {% if locations %}
+            <table class='table table-striped' id='locations-list'>
+				<thead>
+					<tr><th></th><th>Name</th><th>Description</th><th>Path</th></tr>
+				</thead>
+				<tbody>
+	                {% for location in locations %}
+				    <tr>
+				    	<td>
+							<button type="button" class="btn btn-xs btn-default edit-location" data-location="{{location.id}}">
+	  							<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+							</button>
+				    	</td>
+				    	<td><a href='{%url "#locations_sync" location.id %}' class='a-no-decor'>{{location.name}}</a></td>
+				    	<td>{{location.description}}</td>
+				    	<td>{{location.path}}</td>
+				    </tr>
+	                {% endfor %}
+	            </tbody>
+            </table>
+            {% else %}
+                <h1 class='col-sm-4 col-sm-offset-4'>There are no locations</h1>
+            {% endif %}
+        </div>
+
+    </div>
+
+
 
 
 	{% else %}
