--- a/movies/templates/locations_subtitle_fetch_dialog.html
+++ b/movies/templates/locations_subtitle_fetch_dialog.html
@@ -4,7 +4,7 @@
 	        <div class="modal-content">
 	            <div class="modal-header">
 	                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	                <div class="title"></div>
+	                <h5 class="title"></h5>
 	            </div>
 	            <div class="modal-body">
 	            	<div class='container-fluid'>
