--- a/movies/templates/locations.html
+++ b/movies/templates/locations.html
@@ -1,7 +1,6 @@
 {% extends "generic.html" %}
 {% block title %}Locations{% endblock %}
 {% block body %}
-	{% if locations %}
 	
 	<div id='edit-location' class="modal fade">
 		<div class="modal-dialog">
@@ -75,28 +74,22 @@
 				    <tr>
 				    	<td>
 							<button type="button" class="btn btn-xs btn-default edit-location" data-location="{{location.id}}">
-	  							<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+	  							<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
 							</button>
-				    	</td>
+				    	</td>				    	
 				    	<td><a href='{%url "#locations_sync" location.id %}' class='a-no-decor'>{{location.name}}</a></td>
-				    	<td>{{location.description}}</td>
-				    	<td>{{location.path}}</td>
+				    	<td><a href='{%url "#locations_sync" location.id %}' class='a-no-decor'>{{location.description}}</a></td>
+				    	<td><a href='{%url "#locations_sync" location.id %}' class='a-no-decor'>{{location.path}}</a></td>
 				    </tr>
 	                {% endfor %}
 	            </tbody>
             </table>
             {% else %}
-                <h1 class='col-sm-4 col-sm-offset-4'>There are no locations</h1>
+                <h2 class='col-sm-4 col-sm-offset-4'>There are no locations</h2>
             {% endif %}
         </div>
 
     </div>
 
-
-
-
-	{% else %}
-	    <p>No Locations are available.</p>
-	{% endif %}
 {% endblock %}
 
