--- a/movies/templates/movies_control.html
+++ b/movies/templates/movies_control.html
@@ -7,7 +7,7 @@
 		<tr>
 			<th></th><th>Title</th><th>Year</th>
 			<th>Size</th><th>Format</th><th>Audios</th><th>Subs</th>
-			<th>Location</th><th>Ops</th>
+			<th>Location</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -32,13 +32,7 @@
 					{% if not forloop.first %}
 						</tr><tr>
 					{%endif%}
-					<td class='ic_location'>
-						<span class='ic_tooltip' data-title='{{location.1}}'>
-						{{location.0.name}}
-						</span>
-					</td>
-					<td>
-					</td>
+					<td class='ic_location'>{{location.0.name}}</td>
 				{%endfor%}			
 			{%endfor%}			
 		</tr>
