--- a/movies/scss/movies_control.scss
+++ b/movies/scss/movies_control.scss
@@ -29,5 +29,10 @@
 
 #control-icon {
   width: 100%;
-  margin-bottom: 13px;
+}
+
+.boxed-form{
+  border: 1px solid #2e6e73;
+  border-radius: 12px;
+  padding: 12px;
 }
