--- a/movies/templates/movies_control.html
+++ b/movies/templates/movies_control.html
@@ -13,10 +13,43 @@
                     <div class='col-sm-6 col-sm-offset-3 subheader-typo'>DJMovies by coderazzi</div>
                 </div>
             </div>
-            <div class='col-sm-2 col-sm-offset-4'>
-                <div class='row'>
-                    <input class="btn btn-primary col-sm-10 prepend-top" type="button" value="Add new location" id='add-location-btn'/>
-                </div>
+            <div class='col-sm-6 col-sm-offset-31'>
+	            <div class='boxed-form'>
+    	            <div class='form-horizontal'>
+						<div class="form-group">
+							<label for="title-filter" class="col-sm-2 control-label">Title</label>
+							<div class="col-sm-10">
+								<input type="text" class="form-control" id="title-filter">
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="year-filter" class="col-sm-2 control-label">Year</label>
+							<div class="col-sm-3">
+								<select id="year-filter" class="form-control"></select>	
+							</div>
+							<label for="format-filter" class="col-sm-2 control-label">Format</label>
+							<div class="col-sm-5">
+								<select id="format-filter" class="form-control"></select>	
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="audio-filter" class="col-sm-2 control-label">Audio</label>
+							<div class="col-sm-4">
+								<select id="audios-filter" class="form-control"></select>	
+							</div>
+							<label for="subs-filter" class="col-sm-2 control-label">Subs</label>
+							<div class="col-sm-4">
+								<select id="subs-filter" class="form-control"></select>	
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="location-filter" class="col-sm-2 control-label">Location</label>
+							<div class="col-sm-10">
+								<select id="location-filter" class="form-control"></select>	
+							</div>
+						</div>
+					</div>
+				</div>
             </div>
         </div>
     </div>
