--- a/movies/templates/movies_control.html
+++ b/movies/templates/movies_control.html
@@ -18,34 +18,42 @@
     	            <div class='form-horizontal'>
 						<div class="form-group">
 							<label for="title-filter" class="col-sm-2 control-label">Title</label>
-							<div class="col-sm-10">
+							<div class="col-sm-4">
 								<input type="text" class="form-control" id="title-filter">
 							</div>
-						</div>
-						<div class="form-group">
 							<label for="year-filter" class="col-sm-2 control-label">Year</label>
-							<div class="col-sm-3">
+							<div class="col-sm-4">
 								<select id="year-filter" class="form-control"></select>	
 							</div>
-							<label for="format-filter" class="col-sm-2 control-label">Format</label>
-							<div class="col-sm-5">
-								<select id="format-filter" class="form-control"></select>	
+						</div>
+						<div class="form-group">
+							<label for="actor1-filter" class="col-sm-2 control-label">Actor</label>
+							<div class="col-sm-4">
+								<input type="text" class="form-control" id="actor1-filter">
+							</div>
+							<label for="actor2-filter" class="col-sm-2 control-label">Actor +</label>
+							<div class="col-sm-4">
+								<input type="text" class="form-control" id="actor2-filter">
 							</div>
 						</div>
 						<div class="form-group">
+							<label for="genres-filter" class="col-sm-2 control-label">Genre</label>
+							<div class="col-sm-4">
+								<select id="genres-filter" class="form-control"></select>	
+							</div>
 							<label for="audio-filter" class="col-sm-2 control-label">Audio</label>
 							<div class="col-sm-4">
 								<select id="audios-filter" class="form-control"></select>	
 							</div>
-							<label for="subs-filter" class="col-sm-2 control-label">Subs</label>
-							<div class="col-sm-4">
-								<select id="subs-filter" class="form-control"></select>	
-							</div>
 						</div>
 						<div class="form-group">
 							<label for="location-filter" class="col-sm-2 control-label">Location</label>
-							<div class="col-sm-10">
+							<div class="col-sm-4">
 								<select id="location-filter" class="form-control"></select>	
+							</div>
+							<label for="subs-filter" class="col-sm-2 control-label">Subs</label>
+							<div class="col-sm-4">
+								<select id="subs-filter" class="form-control"></select>	
 							</div>
 						</div>
 					</div>
@@ -58,13 +66,21 @@
 <table id='movies_control' class='table table-striped table-hover'>
 	<thead>
 		<tr>
-			<th></th><th>Title</th><th>Year</th>
-			<th>Size</th><th>Format</th><th>Audios</th><th>Subs</th>
+			<th></th>
+			<th>Title</th>
+			<th>Year</th>
+			<th class='ic_genres'>Genre</th>
+			<th class='ic_audios'>Audios</th>
+			<th class='ic_subs'>Subs</th>
 			<th>Location</th>
+			<th class='ic_actors'>Actors</th>
+			<th class='ic_size'>Size</th>
+			<th class='ic_format'>Format</th>
+			<th class='ic_dimensions'></th>
 		</tr>
 	</thead>
 	<tbody>
-		{% for movie, image, locations in info %}
+		{% for movie, image, locations, genres, actors in info %}
 		{% for location in locations %}
 	    <tr>
 			<td class='ic_link' >
@@ -74,11 +90,22 @@
 			</td>
 			<td class='ic_title'>{{movie.title}}</td>
 			<td class='ic_year'>{{movie.year}}</td>
-			<td class='ic_size'>{{movie.size}} Gb</td>
-			<td class='ic_format'>{{movie.format}}:{{movie.width}}x{{movie.height}}</td>
+			<td class='ic_genres'>
+				{% for genre in genres %}
+					{{genre}}<br>
+				{%endfor%}
+			</td>
 			<td class='ic_audios'>{{movie.audios}}</td>
 			<td class='ic_subs'>{{movie.subs}}</td>
 			<td class='ic_location'>{{location.0.name}}</td>
+			<td class='ic_actors'>
+				{% for actor in actors %}
+					{{actor}}<br>
+				{%endfor%}
+			</td>
+			<td class='ic_size'>{{movie.size}} Gb</td>
+			<td class='ic_format'>{{movie.format}}</td>
+			<td class='ic_dimensions'>{{movie.width}}x{{movie.height}}</td>
 		</tr>
 		{%endfor%}			
 		{%endfor%}			
