--- a/movies/static/movies.css
+++ b/movies/static/movies.css
@@ -277,11 +277,13 @@ a.a-no-decor {
   width: 75%;
   margin: 20px auto;
   word-wrap: break-word; }
-  #movies_control img.ic_tooltip_img {
-    width: 30px; }
+  #movies_control .ic_cover img {
+    width: 30px;
+    cursor: pointer; }
   #movies_control .ic_title {
     max-width: 150px;
-    font-weight: bold; }
+    font-weight: bold;
+    cursor: pointer; }
   #movies_control td {
     vertical-align: top; }
   #movies_control .ic_audios, #movies_control .ic_subs {
@@ -290,8 +292,15 @@ a.a-no-decor {
   #movies_control .ic_genres, #movies_control .ic_actors {
     max-width: 120px;
     overflow-x: hidden; }
-  #movies_control .ic_size, #movies_control .ic_format, #movies_control .ic_dimensions {
+  #movies_control .ic_format, #movies_control .ic_duration, #movies_control .ic_links {
     display: none; }
+
+.dmi_label {
+  font-style: italic;
+  font-size: 92%; }
+
+.dmi_info {
+  font-weight: bold; }
 
 #control-icon {
   width: 100%; }
