--- a/movies/static/movies.css
+++ b/movies/static/movies.css
@@ -13,9 +13,8 @@ caption {
   font-size: 24px;
   margin: 12px; }
 
-a.a-no-decor {
-  text-decoration: none;
-  color: black; }
+.progress {
+  display: none; }
 
 .error_dialog {
   display: none;
@@ -41,7 +40,7 @@ a.a-no-decor {
   margin-top: 2px; }
 
 #index_html {
-  background: black; }
+  background: #777; }
   #index_html .row {
     margin-top: 96px; }
   #index_html a.main-icon-ref {
@@ -52,8 +51,6 @@ a.a-no-decor {
       height: 100%; }
   #index_html a.main-icon-ref:hover {
     background: #22b; }
-  #index_html #locations_selection select {
-    font-family: "Lucida Console", Monaco, monospace; }
 
 .btn-color-red {
   background-color: #a32929 !important;
@@ -198,12 +195,14 @@ a.a-no-decor {
 #locations {
   width: 50%;
   margin: 20px 25% 0 25%; }
+  #locations td {
+    vertical-align: middle; }
+
+.click-tr-ref {
+  cursor: pointer; }
 
 #locations-icon {
   width: 100%; }
-
-#locations td {
-  vertical-align: middle; }
 
 #locations_sync {
   width: 75%;
