--- a/movies/templates/generic.html
+++ b/movies/templates/generic.html
@@ -5,9 +5,18 @@
     <link href="/static/bootstrap-3.3.1/css/bootstrap.min.css" rel="stylesheet" media="screen" type='text/css'>
     <link href="/static/messenger/css/messenger.css" rel="stylesheet" media="screen" type='text/css'>
     <link href="/static/messenger/css/messenger-theme-future.css" rel="stylesheet" media="screen" type='text/css'>
+    <link href="/static/spinner-wait.css" rel="stylesheet" media="screen" type='text/css'>
     <link href="/static/movies.css" rel="stylesheet" media="screen" type='text/css'>
   </head>
   <body {% block body_id %}{% endblock %}>
+    <div id="spinner-screen">
+        <div id="spinner-container">
+            <div class="sk-spinner sk-spinner-double-bounce">
+                <div class="sk-double-bounce1"></div>
+                <div class="sk-double-bounce2"></div>
+            </div>
+        </div>
+    </div>
     {% block body %}{% endblock %}
     <script src="/static/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="/static/jquery.cookie.js" type="text/javascript"></script>
@@ -15,12 +24,14 @@
     <script src="/static/bootstrap-3.3.1/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="/static/messenger/js/messenger.min.js" type="text/javascript"></script>
     <script src="/static/messenger/js/messenger-theme-future.js" type="text/javascript"></script>
+    <script src="/static/spinner-wait.js" type="text/javascript"></script>
     <script src="/static/movie_edition.js" type="text/javascript"></script>
     <script src="/static/locations.js" type="text/javascript"></script>
     <script src="/static/locations_sync.js" type="text/javascript"></script>
     <script src="/static/dialog_imdb.js" type="text/javascript"></script>
     <script src="/static/dialog_confirm.js" type="text/javascript"></script>
     <script src="/static/movies_control.js" type="text/javascript"></script>
+    <script src="/static/dialog_imdb_choice.js" type="text/javascript"></script>
     <script src="/static/index.js" type="text/javascript"></script>
     <script src="/static/subtitles_handling.js" type="text/javascript"></script>
     <script src="/static/ajax.js" type="text/javascript"></script>
