--- a/movies/templates/index.html
+++ b/movies/templates/index.html
@@ -2,35 +2,15 @@
 {% block title %}Movies handler{% endblock %}
 {% block body_id %}id='index_html'{% endblock %}
 {% block body %}
-{% load movies_tags %}
-<div id="locations_selection" class="modal fade" tabindex="-1">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h5>Select location</h5>
-            </div>
-            <div class="modal-body">
-        		<select name="location" class='form-control'>
-                	{%for each in locations%}
-                    	<option value="{{each.id}}">{% format_location each format %}</option>
-                    {%endfor%}	                    			
-        		</select>
-            </div>
-            <div class="modal-footer">	
-            	<button type="button" class="btn btn-default" data-dismiss="modal">Edit locations</button>
-            	<button type="button" class="btn btn-primary" data-dismiss="modal">Select</button>
-            </div>
-        </div>
-    </div>
-</div>
+
+{% include "dialog_imdb_choice.html" %}
 
 <div class='container'>
 	<div class='row'>
 		<a id='icon_movies' class='main-icon-ref col-xs-5 col-sm-5 col-md-5 col-lg-5' href='/movies'>
 			<img src='/static/icon_movies.png'>
 		</a>
-		<a id='icon_locations' href='#' class='main-icon-ref col-xs-5 col-sm-5 col-md-5 col-lg-5 col-xs-offset-2 col-sm-offset-2 col-md-offset-2 col-lg-offset-2'>
+		<a id='icon_locations' href='/locations' class='main-icon-ref col-xs-5 col-sm-5 col-md-5 col-lg-5 col-xs-offset-2 col-sm-offset-2 col-md-offset-2 col-lg-offset-2'>
 			<img src='/static/icon_locations.png'>
 		</a>
 	</div>
@@ -38,7 +18,7 @@
 		<a id='icon_imdb' class='main-icon-ref col-xs-5 col-sm-5 col-md-5 col-lg-5'>
 			<img src='/static/icon_imdb.png' >
 		</a>
-		<a id='icon_uquery' class='main-icon-ref col-xs-5 col-sm-5 col-md-5 col-lg-5 col-xs-offset-2 col-sm-offset-2 col-md-offset-2 col-lg-offset-2'>
+		<a id='icon_uquery' href='/uquery' class='main-icon-ref col-xs-5 col-sm-5 col-md-5 col-lg-5 col-xs-offset-2 col-sm-offset-2 col-md-offset-2 col-lg-offset-2'>
 			<img src='/static/icon_uquery.png'>
 		</a>
 	</div>
