--- a/movies/templates/locations.html
+++ b/movies/templates/locations.html
@@ -71,15 +71,15 @@
 				</thead>
 				<tbody>
 	                {% for location in locations %}
-				    <tr>
+				    <tr data-href='{%url "#locations_sync" location.id %}'>
 				    	<td>
 							<button type="button" class="btn btn-xs btn-default edit-location" data-location="{{location.id}}">
 	  							<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
 							</button>
 				    	</td>				    	
-				    	<td><a href='{%url "#locations_sync" location.id %}' class='a-no-decor'>{{location.name}}</a></td>
-				    	<td><a href='{%url "#locations_sync" location.id %}' class='a-no-decor'>{{location.description}}</a></td>
-				    	<td><a href='{%url "#locations_sync" location.id %}' class='a-no-decor'>{{location.path}}</a></td>
+				    	<td class='click-tr-ref'>{{location.name}}</td>
+				    	<td class='click-tr-ref'>{{location.description}}</td>
+				    	<td class='click-tr-ref'>{{location.path}}</td>
 				    </tr>
 	                {% endfor %}
 	            </tbody>
