--- a/uquery/templates/query.html
+++ b/uquery/templates/query.html
@@ -12,11 +12,13 @@
     <link rel="stylesheet" href="/static/bootstrap-3.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/sweet-alert.css">
     <link rel="stylesheet" href="/static/uquery.css">
+    <link rel="stylesheet" href="/static/spinner-wait.css">    
 
     <script src="/static/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="/static/bootstrap-3.3.1/js/bootstrap.min.js"></script>
     <script src="/static/jquery.timeago.js" type="text/javascript"></script>
     <script src="/static/sweet-alert.min.js" type="text/javascript"></script>
+    <script src="/static/spinner-wait.js"></script>
     <script src="/static/uquery.js"></script>
 </head>
 
