Included configuration for imdb search parameters

--- a/movies/templates/dialog_imdb_choice.html
+++ b/movies/templates/dialog_imdb_choice.html
@@ -10,19 +10,19 @@
 					<div class='form-group'>		                
 	                	<label for='year' class='col-sm-3 control-label'>Year</label>
 	                	<div class='col-sm-9'>
-    	            		<input name="year" class='form-control'></select>
+    	            		<input name="year" class='form-control' value='{{imdb_year1}}'></select>
         	        	</div>
             	    </div>
 					<div class='form-group'>		                
 	                	<label for='year2' class='col-sm-3 control-label'>2nd year</label>
 	                	<div class='col-sm-9'>
-    	            		<input name="year2" class='form-control' placeholder="Optional field to create range of years"></select>
+    	            		<input name="year2" class='form-control' placeholder="Optional field to create range of years" value='{{imdb_year2}}'></select>
         	        	</div>
             	    </div>
 					<div class='form-group'>		                
 	                	<label for='max' class='col-sm-3 control-label'>Max results</label>
 	                	<div class='col-sm-9'>
-    	            		<input name="max" class='form-control'></select>
+    	            		<input name="max" class='form-control' value='{{imdb_results}}'></select>
         	        	</div>
             	    </div>
                 </div>                    
