Added jumbotron to IMDB

--- a/movies/templates/generic.html
+++ b/movies/templates/generic.html
@@ -34,6 +34,7 @@
     <script src="/static/dialog_imdb_choice.js" type="text/javascript"></script>
     <script src="/static/index.js" type="text/javascript"></script>
     <script src="/static/subtitles_handling.js" type="text/javascript"></script>
+    <script src="/static/imdb_search.js" type="text/javascript"></script>
     <script src="/static/ajax.js" type="text/javascript"></script>
     <script src="/static/global.js" type="text/javascript"></script>
     {% if messages %}
