--- a/movies/templates/dialog_imdb_choice.html
+++ b/movies/templates/dialog_imdb_choice.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h5>Imdb selection</h5>
+                <h5>Imdb search</h5>
             </div>
             <div class="modal-body">
                 <div class='container-fluid form-horizontal'>
@@ -20,7 +20,7 @@
         	        	</div>
             	    </div>
 					<div class='form-group'>		                
-	                	<label for='max' class='col-sm-3 control-label'>Max results</label>
+	                	<label for='max' class='col-sm-3 control-label'>Imdb results</label>
 	                	<div class='col-sm-9'>
     	            		<input name="max" class='form-control' value='{{imdb_results}}'></select>
         	        	</div>
