--- a/movies/templates/imdb_year_search.html
+++ b/movies/templates/imdb_year_search.html
@@ -34,7 +34,7 @@
 		</tr>
 	</thead>
 	<tbody>
-		{%for href, title, image, rating, number, outline, credit, genres, encodedTitle in search%}
+		{%for href, title, image, rating, number, outline, credit, genres, search, encodedTitle in search%}
 	    <tr>
 	    	<td/>
 	    	<td>{{number}}</td>
