--- a/movies/static/movies.css
+++ b/movies/static/movies.css
@@ -39,6 +39,10 @@ caption {
   font-size: 0.8em;
   margin-top: 2px; }
 
+a.a-no-decor {
+  text-decoration: none;
+  color: black; }
+
 #index_html {
   background: #777; }
   #index_html .row {
