--- a/movies/templates/locations.html
+++ b/movies/templates/locations.html
@@ -1,67 +1,10 @@
 {% extends "generic.html" %}
 {% block title %}Locations{% endblock %}
 {% block body %}
+
+{% include "dialog_edit_location.html" %}
+{% include "header_locations.html" %}
 	
-	<div id='edit-location' class="modal fade">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<form action='{%url "#locations_update" %}' method='POST'>{% csrf_token %}
-					<input type='hidden' name='location.id'>
-					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-						<h5 id='dialog-title'></h5>
-					</div>
-					<div class="modal-body">
-						<div class='container-fluid form-horizontal'>
-  							<div class='form-group'>		                
-			                	<label for='location.name' class='col-sm-2 control-label'>Name</label>
-			                	<div class='col-sm-10'>
-		                    		<input name="location.name" class='form-control'></select>
-		                    	</div>
-			                </div>
-  							<div class='form-group'>		                
-			                	<label for='location.description' class='col-sm-2 control-label'>Description</label>
-			                	<div class='col-sm-10'>
-		                    		<input name="location.description" class='form-control'></select>
-		                    	</div>
-			                </div>
-  							<div class='form-group'>		                
-			                	<label for='location.path' class='col-sm-2 control-label'>Path</label>
-			                	<div class='col-sm-10'>
-		                    		<input name="location.path" class='form-control'></select>
-		                    	</div>
-			                </div>
-						</div>
-					</div>
-					<div class="modal-footer">
-						<button type='submit' id='location-search-button' class="btn btn-primary">Ok</button>
-					</div>			
-				</form>
-			</div>
-		</div>
-	</div>
-
-    <div class='jumbotron'>
-        <div class='container'>
-            <div class='row'>
-                <div class='col-sm-2'>
-                    <a href='/'><img src='/static/locations.png' id='locations-icon'></a>
-                </div>
-                <div class='col-sm-4'>
-                    <div class='col-sm-12 header-typo'>locations</div>
-                    <div class='row'>
-                        <div class='col-sm-6 col-sm-offset-3 subheader-typo'>DJMovies by coderazzi</div>
-                    </div>
-                </div>
-                <div class='col-sm-2 col-sm-offset-4'>
-                    <div class='row'>
-                        <input class="btn btn-primary col-sm-10 prepend-top" type="button" value="Add new location" id='add-location-btn'/>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <div class='container'>
         <div class='row'>
             {% if locations %}
