--- a/movies/templates/header_movies_control.html
+++ b/movies/templates/header_movies_control.html
@@ -2,7 +2,7 @@
     <div class='container'>
         <div class='row'>
             <div class='col-sm-2'>
-                <a href='/'><img src='/static/control.png' id='control-icon'></a>
+                <a href='/'><img src='/static/control.png' class='header-main-icon'></a>
             </div>
             <div class='col-sm-4'>
                 <div class='col-sm-12 header-typo'>movies Control</div>
