--- a/movies/static/movies.css
+++ b/movies/static/movies.css
@@ -1,6 +1,3 @@
-@font-face {
-  font-family: 'Poiret One';
-  src: url("/static/PoiretOne-Regular.ttf"); }
 body {
   padding: 0px;
   margin: 0px; }
@@ -27,17 +24,6 @@ caption {
 
 .prepend-top {
   margin-top: 1.2em; }
-
-.header-typo {
-  font-family: 'Poiret One', cursive;
-  font-weight: bold;
-  font-size: 4.2em;
-  margin-top: 2px; }
-
-.subheader-typo {
-  font-family: "Lucida Console", Monaco, monospace;
-  font-size: 0.8em;
-  margin-top: 2px; }
 
 a.a-no-decor {
   text-decoration: none;
@@ -205,9 +191,6 @@ a.a-no-decor {
 .click-tr-ref {
   cursor: pointer; }
 
-#locations-icon {
-  width: 100%; }
-
 #locations_sync {
   width: 75%;
   margin: 20px auto; }
@@ -305,9 +288,6 @@ a.a-no-decor {
 .dmi_info {
   font-weight: bold; }
 
-#control-icon {
-  width: 100%; }
-
 .boxed-form {
   border: 1px solid #2e6e73;
   border-radius: 12px;
@@ -350,5 +330,155 @@ a.a-no-decor {
 
 #imdb_search .ic_outline {
   max-width: 400px; }
+
+@font-face {
+  font-family: 'Poiret One';
+  src: url("/static/PoiretOne-Regular.ttf"); }
+.header-typo {
+  font-family: 'Poiret One', cursive;
+  font-weight: bold;
+  font-size: 4.2em;
+  margin-top: 2px; }
+
+.subheader-typo {
+  font-family: "Lucida Console", Monaco, monospace;
+  font-size: 0.8em;
+  margin-top: 2px; }
+
+.header-main-icon {
+  width: 100%; }
+
+h2.h2title {
+  font-family: 'Poiret One', cursive;
+  font-weight: bold;
+  font-size: 3.2em;
+  padding-left: 32px; }
+
+.btn-control {
+  width: 100%; }
+
+/*** lists.html **/
+#add-query-modal .modal-footer {
+  border-top: none; }
+
+.query-title {
+  font-size: 1.15em;
+  font-weight: bold; }
+
+.query-title a {
+  color: #555;
+  text-decoration: none; }
+
+#query-list td {
+  vertical-align: middle; }
+
+/*** query.html **/
+#refresh-form fieldset {
+  width: inherit;
+  /* Or auto */
+  padding: 12px;
+  /* To give a bit of padding on the left and right */
+  border: 1px solid #ccc; }
+
+#n-results {
+  font-style: italic;
+  font-weight: bold; }
+
+.divider {
+  border: 1px solid #ddd;
+  margin: 6px 0px; }
+
+select#size-filter {
+  width: 100%;
+  height: 34px;
+  margin-top: 12px;
+  background: #337ab7;
+  color: white; }
+
+#results h2 {
+  border-bottom: 1px solid black; }
+
+.result-name {
+  border-bottom: 1px solid #aaa;
+  font-size: 1.15em;
+  font-weight: bold;
+  color: #555;
+  margin-bottom: .5em;
+  margin-top: 4em; }
+
+.result-name-recent {
+  background: #E0EBFF; }
+
+.tdsize {
+  margin-left: 10px;
+  padding: 0px 12px;
+  border-radius: 20px;
+  color: white;
+  float: right; }
+
+.tdsize-0 {
+  background: red; }
+
+.tdsize-1 {
+  background: orange; }
+
+.tdsize-2 {
+  background: #47f; }
+
+.tdsize-3 {
+  background: #3a3; }
+
+.tdsize-4 {
+  background: black; }
+
+.nfo-flag {
+  font-size: 72%;
+  font-weight: bold; }
+
+.ulabel {
+  font-style: italic; }
+
+.missing-parts {
+  color: red; }
+
+.recent {
+  color: #0a0; }
+
+.row-info {
+  padding-bottom: 0.5em; }
+
+.unknown-result {
+  visibility: hidden; }
+
+.bad-result {
+  color: red; }
+
+.nfo-checkbox {
+  padding-top: .6em; }
+
+.nfo-checkbox label {
+  padding-top: 0.4em;
+  border-top: 1px solid #bbb;
+  width: 100%; }
+
+.row-nfo {
+  display: none; }
+
+/*********  spinner on glypicon ************/
+.glyphicon.spinning {
+  animation: spin 1s infinite linear;
+  -webkit-animation: spin2 1s infinite linear; }
+
+@keyframes spin {
+  from {
+    transform: scale(1) rotate(0deg); }
+  to {
+    transform: scale(1) rotate(360deg); } }
+@-webkit-keyframes spin2 {
+  from {
+    -webkit-transform: rotate(0deg); }
+  to {
+    -webkit-transform: rotate(360deg); } }
+/*********  << spinner on glypicon ************/
 
 /*# sourceMappingURL=movies.css.map */
