--- a/movies/templates/header_imdb_year_search.html
+++ b/movies/templates/header_imdb_year_search.html
@@ -2,7 +2,7 @@
     <div class='container'>
         <div class='row'>
             <div class='col-sm-2'>
-                <a href='/'><img src='/static/imdb.png' id='locations-icon'></a>
+                <a href='/'><img src='/static/imdb.png' class='header-main-icon'></a>
             </div>
             <div class='col-sm-4'>
                 <div class='col-sm-12 header-typo'>Imdb search</div>
