--- a/movies/templates/uquery_base.html
+++ b/movies/templates/uquery_base.html
@@ -6,7 +6,7 @@
         <div class='container'>
             <div class='row'>
                 <div class='col-sm-2'>
-                    <a href='/uquery'><img src='/static/uquery.png' id='uquery-icon'></a>
+                    <a href='/uquery'><img src='/static/uquery.png' class='header-main-icon'></a>
                 </div>
                 <div class='col-sm-10'>
                     <div class='row'>
