--- a/movies/templates/uquery_list.html
+++ b/movies/templates/uquery_list.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="/static/bootstrap-3.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/sweet-alert.css">
-    <link rel="stylesheet" href="/static/uquery.css">
+    <link rel="stylesheet" href="/static/movies.css">
     <link rel="stylesheet" href="/static/spinner-wait.css">    
 
     <script src="/static/jquery-2.1.3.min.js" type="text/javascript"></script>
@@ -83,12 +83,12 @@
         <div class='container'>
             <div class='row'>
                 <div class='col-sm-2'>
-                    <a href='/'><img src='/static/uquery.png' id='uquery-icon'></a>
+                    <a href='/'><img src='/static/uquery.png' class='header-main-icon'></a>
                 </div>
                 <div class='col-sm-4'>
-                    <div class='col-sm-12 uquery-typo'>uquery</div>
+                    <div class='col-sm-12 header-typo'>uquery</div>
                     <div class='row'>
-                        <div class='col-sm-6 col-sm-offset-3'>by coderazzi</div>
+                        <div class='col-sm-6 col-sm-offset-3 subheader-typo'>by coderazzi</div>
                     </div>
                 </div>
                 <div class='col-sm-2 col-sm-offset-4'>
