--- a/movies/templates/uquery_query.html
+++ b/movies/templates/uquery_query.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="/static/bootstrap-3.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/sweet-alert.css">
-    <link rel="stylesheet" href="/static/uquery.css">
+    <link rel="stylesheet" href="/static/movies.css">
     <link rel="stylesheet" href="/static/spinner-wait.css">    
 
     <script src="/static/jquery-2.1.3.min.js" type="text/javascript"></script>
