UQUERY fully integrated

--- a/movies/templates/generic.html
+++ b/movies/templates/generic.html
@@ -6,6 +6,7 @@
     <link href="/static/messenger/css/messenger.css" rel="stylesheet" media="screen" type='text/css'>
     <link href="/static/messenger/css/messenger-theme-future.css" rel="stylesheet" media="screen" type='text/css'>
     <link href="/static/spinner-wait.css" rel="stylesheet" media="screen" type='text/css'>
+    <link href="/static/sweet-alert.css" rel="stylesheet" media="screen" type='text/css'>
     <link href="/static/movies.css" rel="stylesheet" media="screen" type='text/css'>
   </head>
   <body {% block body_id %}{% endblock %}>
@@ -20,11 +21,13 @@
     {% block body %}{% endblock %}
     <script src="/static/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="/static/jquery.cookie.js" type="text/javascript"></script>
+    <script src="/static/jquery.timeago.js" type="text/javascript"></script>
     <script src="/static/json2.js" type="text/javascript"></script>
     <script src="/static/bootstrap-3.3.1/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="/static/messenger/js/messenger.min.js" type="text/javascript"></script>
     <script src="/static/messenger/js/messenger-theme-future.js" type="text/javascript"></script>
     <script src="/static/spinner-wait.js" type="text/javascript"></script>
+    <script src="/static/sweet-alert.min.js" type="text/javascript"></script>
     <script src="/static/movie_edition.js" type="text/javascript"></script>
     <script src="/static/locations.js" type="text/javascript"></script>
     <script src="/static/locations_sync.js" type="text/javascript"></script>
@@ -35,6 +38,8 @@
     <script src="/static/index.js" type="text/javascript"></script>
     <script src="/static/subtitles_handling.js" type="text/javascript"></script>
     <script src="/static/imdb_search.js" type="text/javascript"></script>
+    <script src="/static/uquery.js" type="text/javascript"></script>
+    <script src="/static/uquery-results.js" type="text/javascript"></script>
     <script src="/static/ajax.js" type="text/javascript"></script>
     <script src="/static/global.js" type="text/javascript"></script>
     {% if messages %}
